<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    tools:context=".Profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            android:fontFamily="@font/ubuntu_bold"
            android:gravity="center_horizontal"
            android:padding="8dp"
            android:text="@string/profile2"
            android:textAlignment="center"
            android:textColor="@color/dark"
            android:textSize="20sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:background="@color/dark">

            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_prson"
                app:tint="@color/white" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/wavesImage"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_wave_2"
            app:layout_constraintStart_toStartOf="parent"
            app:tint="@color/dark"
            tools:layout_editor_absoluteY="200dp" />


        <Button
            android:id="@+id/savedButton"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp"
            android:fontFamily="@font/ubuntu_bold"
            android:text="@string/saved_news"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:backgroundTint="@color/dark" />

        <Button
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginVertical="@dimen/_100ssp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp"
            android:fontFamily="@font/ubuntu_bold"
            android:text="@string/logout"
            android:textColor="@color/white"
            android:textSize="10sp"
            app:backgroundTint="@color/dark" />


    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_alignParentBottom="true"
        android:background="@color/gray"
        android:paddingTop="10dp"
        app:itemIconTint="@drawable/selector"
        app:itemRippleColor="@color/gray"
        app:menu="@menu/bottom_menu"
        tools:layout_editor_absoluteX="-1dp"
        tools:layout_editor_absoluteY="355dp" />
</RelativeLayout>