<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".Login">


    <TextView
        android:id="@+id/textSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ubuntu_regular"
        android:paddingTop="100dp"
        android:text="@string/sign_in"
        android:textColor="@color/dark"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="@dimen/_50sdp"
        android:text="@string/email"
        android:textAllCaps="true"
        android:textColor="@color/dark"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@id/viewEmailDivider"
        app:layout_constraintStart_toEndOf="@id/imageEmail"
        app:layout_constraintTop_toBottomOf="@id/textSignIn" />

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:background="@null"
        android:gravity="top"
        android:hint="@string/email_gmail_com"
        android:inputType="textEmailAddress"
        android:minHeight="35dp"
        android:textColor="@color/dark"
        android:textColorHint="@color/darkGray"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@id/viewEmailDivider"
        app:layout_constraintStart_toEndOf="@id/imageEmail"
        app:layout_constraintTop_toBottomOf="@id/textEmail"
        tools:ignore="Autofill" />

    <View
        android:id="@+id/viewEmailDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@color/dark"
        app:layout_constraintTop_toBottomOf="@id/inputEmail" />

    <ImageView
        android:id="@+id/imageEmail"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_email"
        app:layout_constraintBottom_toTopOf="@id/viewEmailDivider"
        app:layout_constraintStart_toStartOf="@id/viewEmailDivider"
        app:layout_constraintTop_toTopOf="@id/textEmail"
        app:tint="@color/dark" />

    <TextView
        android:id="@+id/textPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="@dimen/_40sdp"
        android:text="PASSWORD"
        android:textAllCaps="true"
        android:textColor="@color/dark"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@id/viewEmailDivider"
        app:layout_constraintStart_toEndOf="@id/imageEmail"
        app:layout_constraintTop_toBottomOf="@id/viewEmailDivider" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:background="@null"
        android:gravity="top"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:minHeight="35dp"
        android:textColor="@color/dark"
        android:textColorHint="@color/darkGray"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@id/viewEmailDivider"
        app:layout_constraintStart_toEndOf="@id/imageEmail"
        app:layout_constraintTop_toBottomOf="@id/textPassword"
        tools:ignore="Autofill" />

    <ImageView
        android:id="@+id/imagePassword"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_password"
        app:layout_constraintBottom_toTopOf="@id/viewPasswordDivider"
        app:layout_constraintStart_toStartOf="@id/viewPasswordDivider"
        app:layout_constraintTop_toTopOf="@id/textPassword"
        app:tint="@color/dark" />

    <View
        android:id="@+id/viewPasswordDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@color/darkGray"
        app:layout_constraintTop_toBottomOf="@id/inputPassword" />

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:backgroundTint="@color/dark"
        app:layout_constraintTop_toBottomOf="@id/viewPasswordDivider" />

    <TextView
        android:id="@+id/textRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="300dp"
        android:layout_marginTop="68dp"
        android:fontFamily="@font/ubuntu_regular"
        android:text="@string/register"
        android:textColor="@color/dark"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonSignIn" />


</androidx.constraintlayout.widget.ConstraintLayout>