<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewsPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottomNavigation"
        android:orientation="vertical">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/gray"
                android:fontFamily="@font/ubuntu_bold"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:text="@string/article"
                android:textAlignment="center"
                android:textColor="@color/dark"
                android:textSize="20sp" />

            <Button
                android:id="@+id/save"
                android:layout_width="54dp"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:paddingEnd="10dp"
                android:paddingRight="10dp"
                app:backgroundTint="@color/dark"
                app:icon="@drawable/ic_save"
                tools:ignore="RtlSymmetry" />

        </GridLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="0dp"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="200dp">

                            <ProgressBar
                                android:id="@+id/progressBar"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_gravity="center"
                                android:indeterminateDrawable="@drawable/progress" />

                            <ImageView
                                android:id="@+id/imageView"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:contentDescription="@string/todo"
                                android:foreground="@drawable/gradient" />

                            <TextView
                                android:id="@+id/title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/ubuntu_bold"
                                android:padding="10dp"
                                android:text="@string/title"
                                android:textColor="@color/white"
                                android:textSize="20sp" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="bottom"
                                android:orientation="horizontal"
                                android:padding="10dp">

                                <TextView
                                    android:id="@+id/source"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:ems="15"
                                    android:fontFamily="@font/ubuntu_regular"
                                    android:text="@string/source"
                                    android:textColor="@color/white"
                                    android:textSize="16sp" />

                                <TextView
                                    android:id="@+id/date"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/ubuntu_regular"
                                    android:gravity="right"
                                    android:text="@string/date"
                                    android:textColor="@color/white"
                                    android:textSize="16sp"
                                    tools:ignore="RtlHardcoded" />

                            </LinearLayout>
                        </FrameLayout>

                        <!--                    <TextView-->
                        <!--                        android:id="@+id/description"-->
                        <!--                        android:layout_width="match_parent"-->
                        <!--                        android:layout_height="wrap_content"-->
                        <!--                        android:fontFamily="@font/ubuntu_regular"-->
                        <!--                        android:padding="10dp"-->
                        <!--                        android:text="@string/description"-->
                        <!--                        android:textColor="@color/dark"-->
                        <!--                        android:textSize="16sp" />-->


                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    app:cardCornerRadius="6dp"
                    app:cardElevation="4dp">

                    <ProgressBar
                        android:id="@+id/progressBar2"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:indeterminateDrawable="@drawable/progress" />

                    <WebView
                        android:id="@+id/webView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    </WebView>

                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_alignParentBottom="true"
        android:background="@color/gray"
        android:paddingTop="10dp"
        app:itemIconTint="@drawable/selector"
        app:itemRippleColor="@color/gray"
        app:menu="@menu/bottom_menu" />

</RelativeLayout>